--- a/cv_corp.tex
+++ b/cv_corp.tex
@@ -31,7 +31,7 @@
 
 {\bf Massachusetts Institute of Technology (MIT)}, Cambridge MA
 \begin{itemize}
-\item B.S., Physics \hfill {\em June 2014}
+\item B.S., Physics, GPA 4.5/5.0 \hfill {\em June 2014}
 \item Coursework includes: Differential Equations, Linear Algebra,
   Classical Mechanics II, Quantum Physics II-III,
   Modern Space Science and Engineering, Experimental Physics
@@ -46,24 +46,27 @@
 
 \begin{rSection}{Research Projects}
   \begin{rSubsection}{Data-Driven Modeling for Large Datasets of Spectra}
-    {2014-17}{Caltech; Max Planck Institute of Astronomy}
-    {Pasadena CA; Heidelberg, Germany}
+    {2014-17}{}{}
+  \item 
+    Full-time research as a graduate student at Caltech and a Fulbright
+    Scholar at the Max Planck Institute for Astronomy in Heidelberg, Germany
   \item
-    Wrote open-source code in Python to model large datasets of spectra
+    Wrote \href{https://github.com/annayqho/TheCannon}{open-source code} in Python to model large datasets of spectra
   \item
     On invitation, designed and taught a two-day Python workshop on modeling
     specta, at Gemini Observatory in La Serena, Chile.
     Audience include 13 graduate students, post docs, and faculty.
   \item
-    Presented work as a talk at five international conferences
+    Presented at five international conferences
   \item
-    Presented work as lead author on two publications and 
-    co-author on four publications
+    Six publications, two as lead author and four as co-author 
 \end{rSubsection}
 
 \begin{rSubsection}{Pulsars as a Probe of Magnetic Fields and Plasma Physics}{2012-14}{National Radio Astronomy Observatory}{Charlottesville VA}
+  \item
+    Full-time research as a summer intern 
   \item 
-    Wrote open-source code in Python to measure the 
+    Wrote \href{https://github.com/annayqho/ter5-RMs}{open-source code} in Python to measure the 
     galaxy's magnetic field using radio data
   \item Wrote a successful application for observing time on the 
     Very Large Array in New Mexico
@@ -119,25 +122,25 @@ MIT \hfill {\em 2013}
 
   \begin{rSubsection}{Teacher for K-12 Educational Programs}
     {2010-2017}{}{}
-  \item Through the Educational Studies Program at MIT and the 
-    Institute for Educational Advancement in Pasadena, 
-    I have designed and taught science
+  \item Educational Studies Program at MIT,
+    Institute for Educational Advancement in Pasadena:
+    designed and taught science
     classes for over 500 K-12 students.
-  \item Through the MIT/Teach For America Four Weeks For America Program,
-    I served as a teaching assistant for one month on a high school in
-    the Pueblo Pintado Navajo Reservation in New Mexico. I created
-    new modules for the math curriculum, and tutored and mentored students.
+  \item MIT/Teach For America:
+    teaching assistant on
+    the Pueblo Pintado Navajo Reservation in New Mexico. 
+    Created new modules for the math curriculum, 
+    tutored and mentored students.
   \end{rSubsection}
 
   \begin{rSubsection}{AAS Astronomy Ambassadors Workshop}{January 2014}
   {American Astronomical Society 223rd Meeting}{National Harbor, MD}
-  \item One of 30 early-career astronomers selected for a two-day professional development workshop on effectively communicating science with the public
+  \item One of 30 astronomers selected for professional development workshop on effectively communicating science with the public
   \end{rSubsection}
 
   \begin{rSubsection}{McCormick Public Observatory}{Summer 2012, Summer 2013}
     {Public speaker and volunteer}{Charlottesville, VA}
-  \item Organized a volunteering program for National Radio Astronomy Observatory summer interns
-  \item Gave regular public talks at the observatory
+  \item Ran a volunteering program for National Radio Astronomy Observatory summer interns
   \end{rSubsection}
 
 \end{rSection}
@@ -155,8 +158,7 @@ MIT \hfill {\em 2013}
 
   \begin{rSubsection}{MIT Admissions Blogger}{Fall 2010-Spring 2014}
     {MIT Admissions Office}{Cambridge, MA}
-  \item Wrote \href{http://mitadmissions.org/blogs/profile/annayq}{weekly entries} about MIT life, read by over 7,000 people daily
-  \item Corresponded with prospective students through e-mail and webcasts
+  \item Wrote \href{http://mitadmissions.org/blogs/profile/annayq}{weekly entries} read by over 7,000 daily, corresponded with students through webcasts
   \end{rSubsection}
 
 \end{rSection}
@@ -165,9 +167,9 @@ MIT \hfill {\em 2013}
 \begin{rSection}{Leadership}
 
   \begin{rSubsection}{Science-Engineering-Technology Congressional Visits Day (SETCVD)}{March 2014}{}{Washington, DC}
-  \item The only undergraduate student among 15 graduate students, post docs, and professors selected to represent the American Astronomical Society on Capitol Hill for the annual SETCVD
-  \item Two days of training and workshops about the federal budgeting process 
-  \item Set up and led meetings with Congressional Staff to advocate for federal funding for scientific research and undergraduate research programs
+  \item The only undergraduate student selected to represent the American Astronomical Society
+  \item On Capitol Hill, two days of training and workshops about the federal budgeting process 
+  \item Set up and led meetings with Congressional Staff to advocate for federal funding for research 
   \end{rSubsection}
 
 \begin{rSubsection}{MIT Chancellor's Student Leadership Summit}{September 2013}{}{}
@@ -176,17 +178,18 @@ MIT \hfill {\em 2013}
 \end{rSubsection}
 
 \begin{rSubsection}{MIT Committee on the Undergraduate Program (CUP)}{2013-14}{}{}
-\item Served as one of four student representatives on the CUP, which exercises oversight for the undergraduate academic program
+\item One of four student representatives, CUP exercises oversight for undergraduate academic program
 \end{rSubsection}
 
 \begin{rSubsection}{MIT Dormitory President}{2013}{}{}
-\item Supervised committees and officers, represented dormitory (New House) to the Undergraduate Association and Dormitory Council, organized and ran events to provide a residential support system for students
+\item Supervised committees and officers, represented dormitory to Undergraduate Association and Dormitory Council, ran events to provide a residential support system for students
 \end{rSubsection}
 
 \end{rSection}
 
-\begin{rSection}{Skills}
-\item Programming Languages: Python
+\begin{rSection}{Technical Skills}
+\item Python since 2012, one year of Java, one year of MATLAB
+\item Comfortable in Linux, git, Vim
 \end{rSection}
 
 \end{document}
