--- a/cv_science.tex
+++ b/cv_science.tex
@@ -45,7 +45,7 @@
 \end{itemize}
 
 \begin{itemize}
-  \item M.S., Astrophysics \hfill expected {\em June 2017}
+  \item M.S., Astrophysics \hfill {\em June 2017}
 \end{itemize}
 
 {\bf Massachusetts Institute of Technology (MIT)}, Cambridge MA
@@ -59,11 +59,10 @@
 %   RESEARCH INTERESTS
 %------------------------------------------------------------------------------
 
-\begin{rSection}{Research Interests}
-
-Gamma ray bursts, radio interferometry,
-data-driven modeling, stellar spectroscopy, Milky Way formation, 
-millisecond pulsars
+%\begin{rSection}{Research Interests}
+%Relativistic explosions, time domain astronomy, radio interferometry,
+%data-driven modeling, stellar spectroscopy, Milky Way structure and formation, 
+%millisecond pulsars
 
 \end{rSection}
 
@@ -75,7 +74,9 @@ millisecond pulsars
 
 \begin{itemize}
 \item
-NSF Graduate Research Fellowship \hfill {\em 2014-17}
+NSF Graduate Research Fellowship \hfill {\em 2014-19}
+\item
+Garmire Prize, Caltech \hfill {\em 2017}
 \item
 Fulbright Scholarship \hfill {\em 2014-15}
 \item
@@ -97,6 +98,14 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 %------------------------------------------------------------------------------
 
 \begin{rSection}{Invited and Contributed Talks}
+
+``Dirty Fireballs and Orphan Afterglows: A Broader Landscape of Relativistic Explosions with ZTF''
+\begin{itemize}
+  \item
+    (Contributed) GROWTH Annual Meeting, Milwaukee, WI
+    \hfill {\em October 2017}
+\end{itemize}
+
 ``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys''
 \begin{itemize}
   \item
@@ -104,14 +113,12 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
     \hfill {\em June 2016} \\
     National Radio Astronomy Observatory, Socorro, NM
   \item
-  (Invited) Gemini Observatory Workshop \hfill {\em March 2016} \\
-  Gemini Observatory, La Serena, Chile
+  (Invited) Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
 \end{itemize}
 ``Using \emph{The Cannon} to Exploit the Overlap Between Kepler \& APOGEE''
 \begin{itemize}
   \item
-    (Contributed) Boutiques \& Experiments Conference \hfill {\em August 2015} \\
-    Caltech, Pasadena, CA
+    (Contributed) Boutiques \& Experiments Conference, Caltech, Pasadena, CA \hfill {\em August 2015}
 \end{itemize}
 ``Survey Cross-Calibration Using The Cannon: APOGEE Labels from LAMOST Spectra"
 \begin{itemize}
@@ -192,13 +199,15 @@ Long Beach, CA \hfill {\em January 2013}
 \begin{rSection}{Workshops}
 
   \begin{itemize}
+    \item
+      \emph{Attendee,} LSST Winter School: Machine Learning, Data Visualization, Model Fitting \\
+      Caltech, Pasadena CA \hfill January 2017
 
-    \item 
-      \emph{Invited Instructor,} Gemini Observatory Workshop: \\
-      Data Driven Modeling of Spectra using \emph{The Cannon} \\
-      Gemini Observatory, La Serena, Chile \hfill March 2016
     \item
       \emph{Attendee,} NRAO Summer School, Socorro, NM \hfill June 2016 
+    \item 
+      \emph{Invited Instructor,} Gemini Observatory Workshop: \hfill March 2016 \\
+      Data Driven Modeling of Spectra using \emph{The Cannon}, Gemini Observatory, La Serena, Chile 
 
   \end{itemize}
 
@@ -210,11 +219,17 @@ Long Beach, CA \hfill {\em January 2013}
 %	OBSERVING TIME SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Telescope Time}
+\begin{rSection}{Accepted Proposals, Telescope Time}
 
 \begin{rSubsection}{EVLA}{}{}{}
+\item PI: ``MAXI 170808A, A Short Soft X-ray Transient'' \\
+  3 hours of DDT time at Priority C \hfill {\em August 2017}
+\item PI: ``A Short Soft Transient from MAXI: Detection of a Dirty Fireball?'' \\
+  3 hours of DDT time at Priority C \hfill {\em May 2017}
+\item CoI: ``JAGWAR: Jansky VLA mapping of Gravitational Wave bursts as Afterglows in Radio'' \\
+  266.00 hours at Priority A \hfill {\em August 2016}
 \item PI: ``Monitoring the Pulsed and Continuum Fluxes of Eclipsing Binary Pulsar Terzan 5A" \\
-4 hours, Priority B \hfill {\em February 2014}
+4 hours Priority B \hfill {\em February 2014}
 \end{rSubsection}
 
 \end{rSection}
@@ -225,25 +240,50 @@ Long Beach, CA \hfill {\em January 2013}
 
 \begin{rSection}{Teaching, Public Outreach, Science Policy}
 
+  \begin{rSubsection}{Teaching Award, Caltech}
+  \item Recognized as an ``outstanding TA'' by the Caltech registrar:
+    ``Anna is a G3 in Astrophysics. 
+    Students described Anna as caring, considerate, and committed \ldots 
+    as well as being extremely effective at explaining and summarizing the 
+    course material. The sentiments in this quote were echoed by several other 
+    students: ''She was consistently well-prepared for section, 
+    gave really good notes, and did a really good job of explaining 
+    potentially confusing material and clarifying misunderstandings. 
+    She was very in-tune with the difficulties students were having 
+    and did a very good job of resolving those difficulties.``
+
+  \begin{rSubsection}{Science and Engineering Policy At Caltech}{Fall 2017-present}
+    {Vice President}{Pasadena, CA}
+  \item Organize events and trips,
+    lead lunch discussions on current events in science policy
+  \end{rSubsection}
+
   \begin{rSubsection}{Caltech Astronomy Outreach}{Feb 2015-present}
-    {}{Pasadena, CA}
+    {Co-Coordinator}{Pasadena, CA}
   \item Run outreach evenings, give public talks, answer visitors' questions, 
     facilitate telescope viewing
   \end{rSubsection}
 
+  \begin{rSubsection}{International Summer Symposium on Science and World Affairs}{Summer 2017}
+      {Participant and Speaker}{Darmstadt, Germany}
+    \item Selected to attend this annual international symposium
+      %which aims to cultivate a group of young scientists working on international security issues.
+    \item Gave a talk entitled ``Towards a Framework for Space Traffic Control''
+  \end{rSubsection}
+
   \begin{rSubsection}{TA for Graduate Course, Radio Astronomy}
     {Winter Term 2015-16}{}{Pasadena, CA}
-  \item Grade problem sets, hold office hours
+  \item Graded problem sets, held office hours
   \end{rSubsection}
 
   \begin{rSubsection}
     {TA for Undergraduate Course, Basic Astronomy and the Galaxy}{Fall 2015}
     {}{Pasadena, CA}
-  \item Grade problem sets, hold office hours
+  \item Graded problem sets, held office hours
   \end{rSubsection}
 
   \begin{rSubsection}{Teacher, Institute for Educational Advancement}
-    {Fall 2015}{}{Pasadena, CA}
+    {Fall 2016}{}{Pasadena, CA}
   \item Designed and taught a nine-week course on multiwavelength astronomy
     for gifted 7-12 year olds
   \end{rSubsection}
@@ -296,11 +336,11 @@ Long Beach, CA \hfill {\em January 2013}
 \item Gave regular public talks at the observatory
 \end{rSubsection}
 
-\begin{rSubsection}{MIT Four Weeks For America Program, Teach For America}
-  {January 2011}{Teaching Assistant}{Pueblo Pintado Navajo Reservation, NM}
-\item Created new modules for the high school math curriculum
-\item Tutored and mentored students
-\end{rSubsection}
+%\begin{rSubsection}{MIT Four Weeks For America Program, Teach For America}
+%  {January 2011}{Teaching Assistant}{Pueblo Pintado Navajo Reservation, NM}
+%\item Created new modules for the high school math curriculum
+%\item Tutored and mentored students
+%\end{rSubsection}
 
 \end{rSection}
 
@@ -308,47 +348,54 @@ Long Beach, CA \hfill {\em January 2013}
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Publications}
-
-\textbf{Ho, A.~Y.~Q.}, Rix, H.-W., Ness, M.~K., Hogg, D.~W., et al.\ 2016, 
-\emph{Masses and Ages for 230,000 LAMOST Giants,
-via Their Carbon and Nitrogen Abundances},
-ApJ submitted,
-\href{http://arxiv.org/abs/1609.03195}{(arXiv:1609.03195)}
-
-\textbf{Ho, A.~Y.~Q.}, Ness, M.~K., Hogg, D.~W., et al.\ 2016, 
-\emph{Label Transfer from APOGEE to LAMOST: Precise Stellar Parameters for 
-450,000 LAMOST Giants},
-ApJ accepted,
-\href{http://arxiv.org/abs/1602.00303}{(arXiv:1602.00303)}
-
-Ness, M., Hogg, D.W., Rix, H-W., \textbf{Ho, A. Y. Q.}, Zasowski, G. 2015,
-\emph{The Cannon: A data-driven approach to stellar label determination}, ApJ,
-\textbf{808}, 16 \href{http://arxiv.org/abs/1501.07604}{(arXiv:1501.07604)}
-
-  Casey, A.~R., Hogg, D.~W., Ness, M., Rix, H.-W., 
-  \textbf{Ho, Anna Y. Q.}, Gilmore, G. \ 2016
-  \emph{The Cannon 2: 
-    A data-driven model of stellar spectra for detailed 
-  chemical abundance analyses},
-  ApJ submitted,
-  \href{http://arxiv.org/abs/1603.03040}{(arXiv:1603.03040)}
-
-Ness, M., Hogg, D.~W., Rix, H.-W., Martig, M., Pinsonneault, M. H.,
-\textbf{Ho, A. Y. Q.} \ 2016, 
-\emph{Spectroscopic Determination of Masses (and Implied Ages) for Red Giants},
-ApJ, \textbf{823}, 114 \href{http://arxiv.org/abs/1511.08204}
-{(arXiv:1511.08204)}
-
-  Hogg, D.~W., Casey, A.~R., Ness, M., Rix, H.-W., Foreman-Mackey, D., 
-  Hasselquist, S., \textbf{Ho, Anna Y. Q.} et al.\ 2016,
-  \emph{Chemical tagging can work: Identification of stellar 
-  phase-space structures purely by chemical-abundance similarity},
-  ApJ accepted,
-  \href{http://arxiv.org/abs/1601.05413}{(arXiv:1601.05413)}
-
-\end{rSection}
-
+% \begin{rSection}{Publications (2 lead author, 6 co-author)}
+% 
+% \textbf{Ho, A.~Y.~Q.}, Rix, H.-W., Ness, M.~K., Hogg, D.~W., et al.\ 2016, 
+% \emph{Masses and Ages for 230,000 LAMOST Giants,
+% via Their Carbon and Nitrogen Abundances},
+% ApJ submitted,
+% \href{http://arxiv.org/abs/1609.03195}{(arXiv:1609.03195)}
+% 
+% \textbf{Ho, A.~Y.~Q.}, Ness, M.~K., Hogg, D.~W., et al.\ 2016, 
+% \emph{Label Transfer from APOGEE to LAMOST: Precise Stellar Parameters for 
+% 450,000 LAMOST Giants}, ApJ,
+% \textbf{836}, 5
+% \href{http://arxiv.org/abs/1602.00303}{(arXiv:1602.00303)}
+% 
+% Ting, Y.-S., Rix, H.-W., Conroy, C., \textbf{Ho, A.~Y.~Q.}, \& Lin, J.\ 2017, \href{https://arxiv.org/abs/1708.01758}{(arXiv:1708.01758)}
+% 
+% Blagorodnova, N., et al. (including {Ho, A. Y. Q.}) \ 2017,
+% \emph{iPTF16fnl: a faint and fast tidal disruption event in an E+A galaxy},
+% ApJ submitted,
+% \href{https://arxiv.org/abs/1703.00965}{(arXiv:1703.00965)}
+% 
+% Ness, M., Hogg, D.W., Rix, H-W., \textbf{Ho, A. Y. Q.}, Zasowski, G. 2015,
+% \emph{The Cannon: A data-driven approach to stellar label determination}, ApJ,
+% \textbf{808}, 16 \href{http://arxiv.org/abs/1501.07604}{(arXiv:1501.07604)}
+% 
+% Casey, A.~R., Hogg, D.~W., Ness, M., Rix, H.-W., 
+% \textbf{Ho, Anna Y. Q.}, Gilmore, G. \ 2016
+% \emph{The Cannon 2: 
+% A data-driven model of stellar spectra for detailed 
+% chemical abundance analyses},
+% ApJ submitted,
+% \href{http://arxiv.org/abs/1603.03040}{(arXiv:1603.03040)}
+% 
+% Ness, M., Hogg, D.~W., Rix, H.-W., Martig, M., Pinsonneault, M. H.,
+% \textbf{Ho, A. Y. Q.} \ 2016, 
+% \emph{Spectroscopic Determination of Masses (and Implied Ages) for Red Giants},
+% ApJ, \textbf{823}, 114 \href{http://arxiv.org/abs/1511.08204}
+% {(arXiv:1511.08204)}
+% 
+% Hogg, D.~W., Casey, A.~R., Ness, M., Rix, H.-W., Foreman-Mackey, D., 
+% Hasselquist, S., \textbf{Ho, Anna Y. Q.} et al.\ 2016,
+% \emph{Chemical tagging can work: Identification of stellar 
+% phase-space structures purely by chemical-abundance similarity},
+% ApJ, \textbf{833}, 262
+% \href{http://arxiv.org/abs/1601.05413}{(arXiv:1601.05413)}
+% 
+% \end{rSection}
+% 
 %----------------------------------------------------------------------------------------
 
 \end{document}
