move sec on teaching award

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -240,18 +240,6 @@ Long Beach, CA \hfill {\em January 2013}
 
 \begin{rSection}{Teaching, Public Outreach, Science Policy}
 
-  \begin{rSubsection}{Teaching Award, Caltech}
-  \item Recognized as an ``outstanding TA'' by the Caltech registrar:
-    ``Anna is a G3 in Astrophysics. 
-    Students described Anna as caring, considerate, and committed \ldots 
-    as well as being extremely effective at explaining and summarizing the 
-    course material. The sentiments in this quote were echoed by several other 
-    students: ''She was consistently well-prepared for section, 
-    gave really good notes, and did a really good job of explaining 
-    potentially confusing material and clarifying misunderstandings. 
-    She was very in-tune with the difficulties students were having 
-    and did a very good job of resolving those difficulties.``
-
   \begin{rSubsection}{Science and Engineering Policy At Caltech}{Fall 2017-present}
     {Vice President}{Pasadena, CA}
   \item Organize events and trips,
@@ -270,6 +258,21 @@ Long Beach, CA \hfill {\em January 2013}
       %which aims to cultivate a group of young scientists working on international security issues.
     \item Gave a talk entitled ``Towards a Framework for Space Traffic Control''
   \end{rSubsection}
+
+  \begin{rSubsection}
+    {TA for Undergraduate Course, The Evolving Universe}{Spring 2016}{}{Pasadena, CA}
+  \item Recognized as an ``outstanding TA'' by the Caltech registrar:
+    ``Anna is a G3 in Astrophysics. 
+    Students described Anna as caring, considerate, and committed \ldots 
+    as well as being extremely effective at explaining and summarizing the 
+    course material. The sentiments in this quote were echoed by several other 
+    students: ''She was consistently well-prepared for section, 
+    gave really good notes, and did a really good job of explaining 
+    potentially confusing material and clarifying misunderstandings. 
+    She was very in-tune with the difficulties students were having 
+    and did a very good job of resolving those difficulties.``
+  \end{rSubsection}
+
 
   \begin{rSubsection}{TA for Graduate Course, Radio Astronomy}
     {Winter Term 2015-16}{}{Pasadena, CA}
