--- a/cv_science.tex
+++ b/cv_science.tex
@@ -221,13 +221,17 @@ Long Beach, CA \hfill {\em January 2013}
 
 \begin{rSection}{Accepted Proposals, Telescope Time}
 
+\begin{rSubsection}{ALMA}{}{}{}
+\item PI: ``AT2018cow: the poster-child relativistic explosion for
+  high-frequency time-domain astronomy'' \\
+  2.6 hours at highest priority \hfill {\em June 2018}
+\end{rSubsection}
+
 \begin{rSubsection}{EVLA}{}{}{}
 \item PI: ``MAXI 170808A, A Short Soft X-ray Transient'' \\
   3 hours of DDT time at Priority C \hfill {\em August 2017}
 \item PI: ``A Short Soft Transient from MAXI: Detection of a Dirty Fireball?'' \\
   3 hours of DDT time at Priority C \hfill {\em May 2017}
-\item CoI: ``JAGWAR: Jansky VLA mapping of Gravitational Wave bursts as Afterglows in Radio'' \\
-  266.00 hours at Priority A \hfill {\em August 2016}
 \item PI: ``Monitoring the Pulsed and Continuum Fluxes of Eclipsing Binary Pulsar Terzan 5A" \\
 4 hours Priority B \hfill {\em February 2014}
 \end{rSubsection}
