--- a/cv_science.tex
+++ b/cv_science.tex
@@ -222,8 +222,8 @@ Long Beach, CA \hfill {\em January 2013}
 \begin{rSection}{Accepted Proposals, Telescope Time}
 
 \begin{rSubsection}{ALMA}{}{}{}
-\item PI: ``AT2018cow: the poster-child relativistic explosion for
-  high-frequency time-domain astronomy'' \\
+\item PI: ``AT2018cow: the poster-child relativistic explosion \\
+  for high-frequency time-domain astronomy'' \\
   2.6 hours at highest priority \hfill {\em June 2018}
 \end{rSubsection}
 
