add VLBA proposal

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -227,6 +227,12 @@ Long Beach, CA \hfill {\em January 2013}
   2.6 hours at highest priority \hfill {\em June 2018}
 \end{rSubsection}
 
+\begin{rSubsection}{VLBA}{}{}{}
+\item PI: ``Confirmation of superluminal motion for \\
+  rare relativistic supernova AT2018cow''\\
+  12 hours at Priority A \hfill {\em June 2018}
+\end{rSubsection}
+
 \begin{rSubsection}{EVLA}{}{}{}
 \item PI: ``MAXI 170808A, A Short Soft X-ray Transient'' \\
   3 hours of DDT time at Priority C \hfill {\em August 2017}
