--- a/cv_science.tex
+++ b/cv_science.tex
@@ -227,6 +227,11 @@ Long Beach, CA \hfill {\em January 2013}
   2.6 hours at highest priority \hfill {\em June 2018}
 \end{rSubsection}
 
+\begin{rSubsection}{SMA}{}{}{}
+\item PI: ``SMA Monitoring of the Rare Relativistic Supernova AT2018cow'' \\
+  80 hours \hfill {\em June 2018}
+\end{rSubsection}
+
 \begin{rSubsection}{VLBA}{}{}{}
 \item PI: ``Confirmation of superluminal motion for \\
   rare relativistic supernova AT2018cow''\\
