Get rid of bad line

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -64,7 +64,7 @@
 %data-driven modeling, stellar spectroscopy, Milky Way structure and formation, 
 %millisecond pulsars
 
-\end{rSection}
+%\end{rSection}
 
 %------------------------------------------------------------------------------
 %	HONORS AND AWARDS
