unnecessary extra sentence in quote from registrar

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -277,8 +277,7 @@ Long Beach, CA \hfill {\em January 2013}
   \begin{rSubsection}
     {TA for Undergraduate Course, The Evolving Universe}{Spring 2016}{}{Pasadena, CA}
   \item Recognized as an ``outstanding TA'' by the Caltech registrar:
-    ``Anna is a G3 in Astrophysics. 
-    Students described Anna as caring, considerate, and committed \ldots 
+    ``Students described Anna as caring, considerate, and committed \ldots 
     as well as being extremely effective at explaining and summarizing the 
     course material. The sentiments in this quote were echoed by several other 
     students: ''She was consistently well-prepared for section, 
