--- a/cv_science.tex
+++ b/cv_science.tex
@@ -99,6 +99,20 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 
 \begin{rSection}{Invited and Contributed Talks}
 
+``ZTF18abukavn (AT2018gep): a luminous, rapidly rising, high-velocity Ic-BL supernova''
+\begin{itemize}
+  \item
+    (Contributed) ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
+    \hfill {\em December 2018}
+\end{itemize}
+
+``AT2018cow: a luminous millimeter transient''
+\begin{itemize}
+  \item
+    (Contributed) ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
+    \hfill {\em July 2018}
+\end{itemize}
+
 ``Dirty Fireballs and Orphan Afterglows: A Broader Landscape of Relativistic Explosions with ZTF''
 \begin{itemize}
   \item
