update awards sec

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -76,15 +76,15 @@
 \item
 NSF Graduate Research Fellowship \hfill {\em 2014-19}
 \item
-Garmire Prize, Caltech \hfill {\em 2017}
+Garmire Prize, Caltech (Division Award) \hfill {\em 2017}
 \item
 Fulbright Scholarship \hfill {\em 2014-15}
 \item
-Ida M. Green Fellowship, MIT \hfill {\em 2014} 
+Ida M. Green Fellowship, MIT (Departmental Award) \hfill {\em 2014} 
 \item
 Ford Foundation Fellowship, Honorable Mention \hfill {\em 2014} 
 \item
-Karl Taylor Compton Prize, MIT \hfill {\em 2014} 
+Karl Taylor Compton Prize, MIT (University Award) \hfill {\em 2014} 
 \item
 Chambliss Astronomy Achievement Student Awards, Honorable Mention \hfill {\em 2014}
 \item
