add press panel

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -99,6 +99,15 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 
 \begin{rSection}{Invited and Contributed Talks}
 
+``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective''
+\begin{itemize}
+  \item
+    (Invited) Press Panel at the AAS Winter Meeting, Seattle, WA
+    \hfill {\em January 2019}
+\end{itemize}
+
+``AT2018cow: a luminous millimeter transient''
+
 ``ZTF18abukavn (AT2018gep): a luminous, rapidly rising, high-velocity Ic-BL supernova''
 \begin{itemize}
   \item
