--- a/cv_science.tex
+++ b/cv_science.tex
@@ -99,14 +99,35 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 
 \begin{rSection}{Invited and Contributed Talks}
 
+``SMA Observations of AT2018cow: A Prototype for Millimeter Time-Domain Astronomy''
+\begin{itemize}
+  \item
+    (Contributed) SMA Seminar, Harvard-Smithsonian CfA, Cambridge, MA
+    \hfill {\em April 2019}
+\end{itemize}
+
+``The Death Throes of a Stripped Massive Star''
+\begin{itemize}
+  \item
+    (Contributed) UC Berkeley Department Lunch Talk, Berkeley, CA
+    \hfill {\em April 2019}
+  \item
+    (Contributed) Stars and Planets Seminar, Harvard-Smithsonian CfA, Cambridge, MA
+    \hfill {\em April 2019}
+  \item
+    (Invited) Brown Bag Lunch, MIT, Cambridge, MA
+    \hfill {\em April 2019}
+  \item
+    (Contributed) STScI Spring Symposium, Baltimore, MD
+    \hfill {\em April 2019}
+\end{itemize}
+
 ``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective''
 \begin{itemize}
   \item
-    (Invited) Press Panel at the AAS Winter Meeting, Seattle, WA
+    (Invited) Talk (Press Panel) at the AAS Winter Meeting, Seattle, WA
     \hfill {\em January 2019}
 \end{itemize}
-
-``AT2018cow: a luminous millimeter transient''
 
 ``ZTF18abukavn (AT2018gep): a luminous, rapidly rising, high-velocity Ic-BL supernova''
 \begin{itemize}
