--- a/cv_science.tex
+++ b/cv_science.tex
@@ -207,6 +207,23 @@ Charlottesville, VA \hfill {\em August 2012}
 
 \begin{rSection}{Posters}
 
+``AT2018cow: A Luminous Millimeter Transient''
+\begin{itemize}
+  \item
+    American Astronomical Society 233rd Winter Meeting, Seattle, WA
+    \hfill {\em January 2019}\\
+\end{itemize}
+
+``Rotation Measures of Globular Cluster Pulsars as a Unique Probe of the Galactic Magnetic Field"
+\begin{itemize}
+\item
+American Astronomical Society 223rd Meeting, 
+National Harbor, MD \hfill {\em January 2014}
+\item
+Conference of Research Experiences for Undergraduates, \hfill {\em October 2013}\\
+Council on Undergraduate Research, Arlington, VA 
+\end{itemize}
+
 ``Survey Cross-Calibration Using \emph{The Cannon}:
 LAMOST Labels on the APOGEE scale''
 \begin{itemize}
