update sci comm

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -314,7 +314,24 @@ Long Beach, CA \hfill {\em January 2013}
 %	TEACHING AND OUTREACH EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Teaching, Public Outreach, Science Policy}
+\begin{rSection}{Science Communication}
+
+  \begin{rSubsection}{Public Talks}{Fall 2015-present}
+    {Speaker}{Los Angeles, CA}
+  \item Since the beginning of graduate school, I have given several public talks
+    per year for amateur astronomy societies and local observatories.
+  \end{rSubsection}
+
+  \begin{rSubsection}{Science Policy Committee, Graduate Student Council}{Fall 2018-present}
+    {Chair}{Pasadena, CA}
+  \item I founded the committee and serve as the chair. 
+    We organize career panels and host speakers on topics in science policy.
+  \end{rSubsection}
+
+  \begin{rSubsection}{Caltech Letters}{Spring 2018-present}
+    {Contributing Writer}{Pasadena, CA}
+  \item I write articles on my research for the public
+  \end{rSubsection}
 
   \begin{rSubsection}{Science and Engineering Policy At Caltech}{Fall 2017-present}
     {Vice President}{Pasadena, CA}
@@ -323,7 +340,7 @@ Long Beach, CA \hfill {\em January 2013}
   \end{rSubsection}
 
   \begin{rSubsection}{Caltech Astronomy Outreach}{Feb 2015-present}
-    {Co-Coordinator}{Pasadena, CA}
+    {Volunteer}{Pasadena, CA}
   \item Run outreach evenings, give public talks, answer visitors' questions, 
     facilitate telescope viewing
   \end{rSubsection}
