--- a/cv_science.tex
+++ b/cv_science.tex
@@ -76,6 +76,8 @@
 \item
 NSF Graduate Research Fellowship \hfill {\em 2014-19}
 \item
+Affiliate, Keck Institute for Space Sciences (Division Award) \hfill {\em 2019}
+\item
 Garmire Prize, Caltech (Division Award) \hfill {\em 2017}
 \item
 Fulbright Scholarship \hfill {\em 2014-15}
