add middle initials

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -26,7 +26,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} 
 \usepackage{hyperref}
 
-\name{Anna Ho} % Your name
+\name{Anna Y. Q. Ho} % Your name
 \address{ah@astro.caltech.edu} % Your phone number and email
 \address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
 
@@ -41,7 +41,7 @@
 {\bf California Institute of Technology (Caltech)}, Pasadena CA
 \begin{itemize}
 \item Ph.D., Astrophysics, 
-  Advisor: Prof. Shrinivas Kulkarni \hfill expected {\em June 2020} 
+  Advisor: Prof. Shri Kulkarni \hfill expected {\em June 2020} 
 \end{itemize}
 
 \begin{itemize}
